@@ -1,4 +1,3 @@
 #!/usr/bin/env python
-import sys
-from pylint import lint
-lint.Run(sys.argv[1:])
+from pylint import run_pylint
+run_pylint()
