@@ -1,7 +1,3 @@
 #!/usr/bin/env python
-import sys
-try:
-    from pylint import gui 
-    gui.Run(sys.argv[1:])
-except ImportError:
-    sys.exit('tkinter is not available')
+from pylint import run_pylint_gui
+run_pylint_gui()
