@@ -1,4 +1,3 @@
 #!/usr/bin/python
-import sys
-from pylint.pyreverse import main
-main.Run(sys.argv[1:])
+from pylint import run_pyreverse
+run_pyreverse()
