@@ -1,3 +1,3 @@
 #!/usr/bin/env python
-from pylint.checkers import similar
-similar.run()
+from pylint import run_symilar
+run_symilar()
